--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 node_modules
 */node_modules
+*/node_modules/*
+dist
+dist/*
+*/dist
+*/dist/*
 .env
-node_modules/.cache/@babel/register/.babel.7.20.7.development.json
+
