--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "sequelize": "^6.28.0",
-    "tedious": "^15.1.2"
+    "tedious": "^15.1.2",
+    "twitter-api-v2": "^1.17.2"
   },
   "devDependencies": {
     "chai": "^4.3.7",
