--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "backend api endpoints for swapup.trade",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./src/server.js",
+    "start:dev": "nodemon --exec babel-node ./src/server.js",
     "build": "npm ci&& babel ./src --out-dir ./dist --source-maps",
-    "start:prod": "npm run build && node ./dist/server.js",
+    "start": "node ./dist/server.js",
     "dev": "set NODE_ENV=development&& nodemon --exec babel-node ./src/server.js",
     "test": "set NODE_ENV=test&& nodemon --exec babel-node ./src/server.js",
     "prod": "set NODE_ENV=production&& nodemon --exec babel-node ./src/server.js"
