--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "node-html-to-image": "^4.0.0",
+    "puppeteer": "^23.3.0",
     "sequelize": "^6.28.0",
     "tedious": "^15.1.2",
     "twitter-api-v2": "^1.17.2"
