--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Swapup-trade/Back-End#readme",
   "dependencies": {
+    "@azure/storage-blob": "^12.24.0",
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.7",
     "@babel/node": "^7.20.7",
@@ -33,6 +34,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "multer": "^1.4.5-lts.1",
     "puppeteer": "^23.3.0",
     "sequelize": "^6.28.0",
     "tedious": "^15.1.2",
