save payment webhook data to db & manual subname mint

--- a/.env
+++ b/.env
@@ -51,5 +51,8 @@ AZURE_BLOB_STORAGE_SAS_TOKEN="sp=racwdli&st=2024-09-10T11:15:34Z&se=2026-01-31T1
 AZURE_BLOB_STORAGE_ACCOUNT_NAME="swapupprofileimages2345"
 AZURE_BLOB_STORAGE_CONTAINER_NAME="user-profile-images"
 
-# Payment webhook credentilas
-THIRDWEB_PAYMENT_WEBHOOK_SECRET_KEY="Ev1S-TUbcRHjLkAdQJbt_cpwa0To0H09FQtLEG7TTGVMBAbL5uT66RUfQEZRcibitlOZBkH4B2xY-cNZC5LXCg"
+# Payment webhook credentilas 
+# (for Local environemnt)
+THIRDWEB_PAYMENT_WEBHOOK_SECRET_KEY="yn-SlApBbChLoR9iV_pQUWc-g5nqz2raHFEUNr7iRKuPvumex1UttUdoB-Al1kzMu5_rWDf1rc4pN4XoLrI6DQ"
+NAMESPACE_OFFCHAIN_API_BASE_URL="https://offchain.namespace.tech"
+NAMESPACE_API_KEY="Iy0BzGNNvjCnMIjOq6g0h3REfiKEX3oq"
