refactoring: env config, error logging and code refactoring

--- a/.env
+++ b/.env
@@ -1,42 +1,84 @@
-NODE_ENV=development
-# NODE_ENV=production
+# Available environments for backend are ...
+# (key: local - id: 4) | (key: development - id: 3) | (key: staging - id: 2) | (key: production - id: 1)
 
-# Alchemy keys: (Goerli) - Q5Q9vPKP0XELy-wuE3H2Y_oqfI_FeXaD | (Sepolia) - FM2N8UFuTm7ctfj_3JDMZYsyJycjE8pg | (Mainnet) - 5zvjsxcxBbQtkH1DzIOev2c4jBYfxNsQ
-ALCHEMY_KEY = "FM2N8UFuTm7ctfj_3JDMZYsyJycjE8pg"
-#network - goerli (5) - main (1) - Sepolia (11155111) - sepolia-base(84532)
-NETWORK = 84532
-PORT = 8800
-API_RATE_WINDOW = 10
-API_RATE_LIMIT = 1000
-# Api paload limit size in kbs
-API_PAYLOAD_LIMIT = 500
+# Tip: Goto config directory to view detail implementation of environmental variables
+# Note: Alchemy keys and newtwork ids are ...
+# Alchemy keys: (Goerli) - Q5Q9vPKP0XELy-wuE3H2Y_oqfI_FeXaD | (Sepolia base) - FM2N8UFuTm7ctfj_3JDMZYsyJycjE8pg | (Mainnet) - 5zvjsxcxBbQtkH1DzIOev2c4jBYfxNsQ
+# Network Ids:  goerli (5) - main (1) - Sepolia (11155111) - sepolia-base(84532)
 
-# Local: DB credentials for local environment
-DB_NAME = "swap-up-test"
-DB_USER = "testuser"
-DB_PWD  = "123"
-DB_HOST = "localhost"
-DB_PORT = 1434
+# key - swapup environment key / name
+SWAPUP_ENVIRONMENT_KEY="local"
 
-# Stagging: DB credentials for white dune
-# DB_NAME = "swapup-dev-db2"
-# DB_USER = "swapup"
-# DB_PWD  = "@123007P"
-# DB_HOST = "swapup-dev.database.windows.net"
+# local - environment variables
+LOCAL_ENVIRONMENT_ID = 4
+LOCAL_ENVIRONMENT_KEY = "local"
+LOCAL_NETWORK_ID = 84532
+LOCAL_ALCHEMY_KEY = "FM2N8UFuTm7ctfj_3JDMZYsyJycjE8pg"
+LOCAL_PORT = 8800
+LOCAL_API_RATE_WINDOW = 10
+LOCAL_API_RATE_LIMIT = 1000
+LOCAL_API_PAYLOAD_LIMIT = 500  # Note: Api paload limit size in kbs
+LOCAL_DB_NAME = "swap-up-test"
+LOCAL_DB_USER = "testuser"
+LOCAL_DB_PWD  = "123"
+LOCAL_DB_HOST = "localhost"
+LOCAL_DB_PORT = 1434
+LOCAL_THIRDWEB_PAYMENT_WEBHOOK_SECRET_KEY="yn-SlApBbChLoR9iV_pQUWc-g5nqz2raHFEUNr7iRKuPvumex1UttUdoB-Al1kzMu5_rWDf1rc4pN4XoLrI6DQ"
 
-# Production: DB credentials for agreeable island
-# DB_NAME = "swapup-dev-db"
-# DB_USER = "swapup"
-# DB_PWD  = "@123007P"
-# DB_HOST = "swapup-dev.database.windows.net"
+# development - environment variables 
+DEVELOPMENT_ENVIRONMENT_ID=3
+DEVELOPMENT_ENVIRONMENT_KEY="development"
+DEVELOPMENT_NETWORK_ID=84532
+DEVELOPMENT_ALCHEMY_KEY = "FM2N8UFuTm7ctfj_3JDMZYsyJycjE8pg"
+DEVELOPMENT_PORT = 8800
+DEVELOPMENT_API_RATE_WINDOW = 10
+DEVELOPMENT_API_RATE_LIMIT = 1000
+DEVELOPMENT_API_PAYLOAD_LIMIT = 500  # Note: Api paload limit size in kbs
+DEVELOPMENT_DB_NAME = "swapup-dev-db2"
+DEVELOPMENT_DB_USER = "swapup"
+DEVELOPMENT_DB_PWD  = "@123007P"
+DEVELOPMENT_DB_HOST = "swapup-dev.database.windows.net"
+DEVELOPMENT_DB_PORT = 1433
+DEVELOPMENT_THIRDWEB_PAYMENT_WEBHOOK_SECRET_KEY="yn-SlApBbChLoR9iV_pQUWc-g5nqz2raHFEUNr7iRKuPvumex1UttUdoB-Al1kzMu5_rWDf1rc4pN4XoLrI6DQ"
 
-# Production 1: DB credentials for prod-1
-# DB_NAME = "swapup-prod-1"
-# DB_USER = "swapupsqlnftlogin"
-# DB_PWD = "$w@pupl0g1n1!"
-# DB_HOST = "swapup-prod-db.database.windows.net"
 
-# Twitter SDK credentials
+# staging - environment variables 
+STAGING_ENVIRONMENT_ID=2
+STAGING_ENVIRONMENT_KEY="staging"
+STAGING_NETWORK_ID=84532
+STAGING_ALCHEMY_KEY = "FM2N8UFuTm7ctfj_3JDMZYsyJycjE8pg"
+STAGING_PORT = 8800
+STAGING_API_RATE_WINDOW = 10
+STAGING_API_RATE_LIMIT = 1000
+STAGING_API_PAYLOAD_LIMIT = 500  # Note: Api paload limit size in kbs
+STAGING_DB_NAME = "swapup-dev-db"
+STAGING_DB_USER = "swapup"
+STAGING_DB_PWD  = "@123007P"
+STAGING_DB_HOST = "swapup-dev.database.windows.net"
+STAGING_DB_PORT = 1433
+STAGING_THIRDWEB_PAYMENT_WEBHOOK_SECRET_KEY="yn-SlApBbChLoR9iV_pQUWc-g5nqz2raHFEUNr7iRKuPvumex1UttUdoB-Al1kzMu5_rWDf1rc4pN4XoLrI6DQ"
+
+# production - environment variables 
+PRODUCTION_NETWORK_ID=1
+PRODUCTION_ENVIRONMENT_KEY="production"
+PRODUCTION_NETWORK_ID=84532
+PRODUCTION_ALCHEMY_KEY = "FM2N8UFuTm7ctfj_3JDMZYsyJycjE8pg"
+PRODUCTION_PORT = 8800
+PRODUCTION_API_RATE_WINDOW = 10
+PRODUCTION_API_RATE_LIMIT = 1000
+PRODUCTION_API_PAYLOAD_LIMIT = 500  # Note: Api paload limit size in kbs
+PRODUCTION_DB_NAME = "swapup-dev-db"
+PRODUCTION_DB_USER = "swapup"
+PRODUCTION_DB_PWD  = "@123007P"
+PRODUCTION_DB_HOST = "swapup-dev.database.windows.net"
+PRODUCTION_DB_PORT = 1433
+PRODUCTION_THIRDWEB_PAYMENT_WEBHOOK_SECRET_KEY="yn-SlApBbChLoR9iV_pQUWc-g5nqz2raHFEUNr7iRKuPvumex1UttUdoB-Al1kzMu5_rWDf1rc4pN4XoLrI6DQ"
+
+
+
+# Shared - credentials amoung all envirnments
+
+# Twitter - SDK credentials
 TWITTER_API_KEY=wiU8y6hYxi4tw3KOk6HRuzBNI
 TWITTER_API_SECRET_KEY=qdGYmFxaMa15IAZLP7CI4fRecAIMA9NNV0nkcAVJkWmfHOvM3O
 TWITTER_ACCESS_TOKEN=2935058869-b2DTeSrbW2VYBEn8PX5seHtOS3LkxBVKTgoTUSC
@@ -45,14 +87,21 @@ TWITTER_CLIENT_ID=WFNlZkFYUGViY0hHbU5Bd0ZVSTk6MTpjaQ
 TWITTER_CLIENT_SECRET=1Y3Pm8XUN6-aSqtippXk5nIFr3gjU1kKvQHm-JbgwOTzrGS1iz
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAACSEvQEAAAAAuUObeS0JDbf6vva7nvi1wkwXRKI%3DuBUkKXfTdz5KXluqCeV3X9z1AeVuYxkiNEYR3N6y709CffRml0
 
-# Azure Blob Storage Credentials
+# Azure - Blob Storage Credentials
 AZURE_BLOB_STORAGE_SAS_URL="https://swapupprofileimages2345.blob.core.windows.net/user-profile-images?sp=racwdli&st=2024-09-10T11:15:34Z&se=2026-01-31T19:15:34Z&spr=https&sv=2022-11-02&sr=c&sig=LrtwE4UcW3mBVvASqIo%2Fa0Gei7m%2BQQWs%2FY%2FIMYKvnpg%3D"
 AZURE_BLOB_STORAGE_SAS_TOKEN="sp=racwdli&st=2024-09-10T11:15:34Z&se=2026-01-31T19:15:34Z&spr=https&sv=2022-11-02&sr=c&sig=LrtwE4UcW3mBVvASqIo%2Fa0Gei7m%2BQQWs%2FY%2FIMYKvnpg%3D"
 AZURE_BLOB_STORAGE_ACCOUNT_NAME="swapupprofileimages2345"
 AZURE_BLOB_STORAGE_CONTAINER_NAME="user-profile-images"
 
-# Payment webhook credentilas 
-# (for Local environemnt)
-THIRDWEB_PAYMENT_WEBHOOK_SECRET_KEY="yn-SlApBbChLoR9iV_pQUWc-g5nqz2raHFEUNr7iRKuPvumex1UttUdoB-Al1kzMu5_rWDf1rc4pN4XoLrI6DQ"
+# Namespace - mint subname credentials
 NAMESPACE_OFFCHAIN_API_BASE_URL="https://offchain.namespace.tech"
 NAMESPACE_API_KEY="Iy0BzGNNvjCnMIjOq6g0h3REfiKEX3oq"
+
+
+
+
+# Production 1: DB credentials for prod-1
+# DB_NAME = "swapup-prod-1"
+# DB_USER = "swapupsqlnftlogin"
+# DB_PWD = "$w@pupl0g1n1!"
+# DB_HOST = "swapup-prod-db.database.windows.net"
