creating smart account and saving data in db & db config updated

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # Network Ids:  goerli (5) - main (1) - Sepolia (11155111) - sepolia-base(84532)
 
 # key - swapup environment key / name
-SWAPUP_ENVIRONMENT_KEY="development"
+SWAPUP_ENVIRONMENT_KEY="local"
 
 # local - environment variables
 LOCAL_ENVIRONMENT_ID = 4
@@ -101,8 +101,11 @@ AZURE_BLOB_STORAGE_CONTAINER_NAME="user-profile-images"
 NAMESPACE_OFFCHAIN_API_BASE_URL="https://offchain.namespace.tech"
 NAMESPACE_API_KEY="Iy0BzGNNvjCnMIjOq6g0h3REfiKEX3oq"
 
-
-
+# Thirdweb Credentials
+# Test thirdweb client: swapup-dev-khalils
+THIRDWEB_CLIENT_ID="4512fd178df714ab1b5fee8e254c3c5a"
+# Test Treasury Wallet - khalil's 
+SWAPUP_TREASURY_WALLET="0xe6a28D675f38856ad383557C76dfdA2238961A49"
 
 # Production 1: DB credentials for prod-1
 # DB_NAME = "swapup-prod-1"
