--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ethers": "^6.13.4",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "puppeteer": "^23.3.0",
     "sequelize": "^6.28.0",
     "tedious": "^15.1.2",
+    "thirdweb": "^5.63.2",
     "twitter-api-v2": "^1.17.2",
     "winston": "^3.15.0",
     "winston-daily-rotate-file": "^5.0.0"
