--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # Network Ids:  goerli (5) - main (1) - Sepolia (11155111) - sepolia-base(84532)
 
 # key - swapup environment key / name
-SWAPUP_ENVIRONMENT_KEY="development"
+SWAPUP_ENVIRONMENT_KEY="local"
 
 # local - environment variables
 LOCAL_ENVIRONMENT_ID = 4
@@ -20,7 +20,7 @@ LOCAL_API_RATE_LIMIT = 1000
 LOCAL_API_PAYLOAD_LIMIT = 500  # Note: Api paload limit size in kbs
 LOCAL_DB_NAME = "swap-up-test"
 LOCAL_DB_USER = "testuser"
-LOCAL_DB_PWD  = "123"
+LOCAL_DB_PWD  = "1234"
 LOCAL_DB_HOST = "localhost"
 LOCAL_DB_PORT = 1434
 LOCAL_THIRDWEB_PAYMENT_WEBHOOK_SECRET_KEY="ahCEB9HK7WogMzKOo6dAbV-PkTC52tKS_j0ptdEDgdR0hYcSGPhfIa3tWoqXxxw8X9-yfqkYYcBIhaRv4ugCqw"
