--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
   "homepage": "https://github.com/Swapup-trade/Back-End#readme",
   "dependencies": {
     "@azure/storage-blob": "^12.24.0",
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.7",
     "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.18.9",
     "alchemy-sdk": "^2.2.4",
     "axios": "^1.7.7",
@@ -46,10 +43,14 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.26.0",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "mocha": "^10.2.0",
-    "nodemon": "^3.1.4",
-    "sequelize-cli": "^6.6.2"
+    "nodemon": "^3.1.4"
   }
 }
