handling proposal id in notifications table

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # Network Ids:  goerli (5) - main (1) - Sepolia (11155111) - sepolia-base(84532)
 
 # key - swapup environment key / name
-SWAPUP_ENVIRONMENT_KEY="local"
+SWAPUP_ENVIRONMENT_KEY="development"
 
 # local - environment variables
 LOCAL_ENVIRONMENT_ID = 4
