--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "multer": "^1.4.5-lts.1",
+    "namespace-sdk": "^1.3.8",
     "puppeteer": "^23.3.0",
     "sequelize": "^6.28.0",
     "tedious": "^15.1.2",
