--- a/.github/workflows/deploy_swapup-api-dev.yml
+++ b/.github/workflows/deploy_swapup-api-dev.yml
@@ -20,15 +20,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-
-      - name: npm install, build, and test
+      - name: Install dependencies and build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./dist
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -51,8 +49,8 @@ jobs:
         with:
           name: node-app
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
+      - name: Wait for 5 seconds
+        run: sleep 5
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -62,10 +60,8 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3BA5770DFDE949ABAAE12A8E4D9218D5 }}
 
       - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'swapup-api-dev'
-          slot-name: 'Production'
-          package: .
+          package: release.zip          
           
