--- a/.github/workflows/deploy_swapup-api-dev.yml
+++ b/.github/workflows/deploy_swapup-api-dev.yml
@@ -26,7 +26,7 @@ jobs:
           npm run build --if-present
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./dist
+        run: zip -r release.zip ./dist package.json package-lock.json node_modules
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
