--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/Swapup-trade/Back-End#readme",
   "dependencies": {
+    "@azure/identity": "^4.6.0",
+    "@azure/keyvault-keys": "^4.9.0",
+    "@azure/keyvault-secrets": "^4.9.0",
     "@azure/storage-blob": "^12.24.0",
     "@babel/node": "^7.20.7",
     "@babel/register": "^7.18.9",
